2000-10-20	Joel Sherrill <joel@OARcorp.com>

	* network/dec21140.c: Corrected attach to include "int attach"
	parameter.

2000-09-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* network/Makefile.am: Use AM_*FLAGS += .. .
	* ChangeLog: Fix formating.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* network/Makefile.am, rtc/Makefile.am, serial/Makefile.am:
	Include compile.am.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.