@@ -1,3 +1,8 @@
+2000-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
+	Switch to GNU canonicalization.
+
 2000-10-20	Joel Sherrill <joel@OARcorp.com>
 
 	* network/dec21140.c: Corrected attach to include "int attach"
